# quiverMutation

./: README.md  main.py  pyproject.toml  quiverExamples.py  quiverMutation.py  quiverMutationExample  quiverMutationExample.txt  quiver_examples.py  quiver_mutation.py  quiver_mutation_algebra.py  quiver_mutation_core.py  quiver_mutation_io.py  quiver_mutation_line.py  quiver_mutation_polars_io.py  quiver_mutation_quipus.py  quiver_mutation_relations.py  quiver_mutation_search.py  quiver_mutation_utils.py
.github/workflows/: python-tests.yml
quiver_mutation/: __init__.py  core.py  coxeter_ploynomial.py  examples.py  line.py  main.py  pathAlgebraClass.py  path_algebra_class.py  polars_io.py  quipus.py  quiverExamples.py  quiver_mutation_algebra.py  quiver_mutation_core.py  quiver_mutation_io.py  quiver_mutation_line.py  quiver_mutation_quipus.py  quiver_mutation_relations.py  quiver_mutation_search.py  relations.py  search.py
tests/: test_quiver_mutation.py  test_quiver_mutation_polars_io.py
