[project]
name = "quiverMutation"
version = "0.1.0"
description = "Tools for mutating quivers with relations and working with their path algebras."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Unknown" }]

dependencies = [
  "matplotlib==3.9.2",
  "networkx==3.3",
  "nodepy==1.0.1",
  "numpy==2.1.1",
  "polars==1.7.1",
  "sympy==1.13.3",
]

[project.optional-dependencies]
test = ["pytest==8.3.3"]

[tool.setuptools]
py-modules = [
  "main",
  "path_algebra_class",
  "quiver_examples",
  "quiver_mutation",
  "quiver_mutation_algebra",
  "quiver_mutation_core",
  "quiver_mutation_io",
  "quiver_mutation_line",
  "quiver_mutation_polars_io",
  "quiver_mutation_quipus",
  "quiver_mutation_relations",
  "quiver_mutation_search",
  "quiver_mutation_utils",
]

[build-system]
requires = ["setuptools==75.1.0", "wheel==0.44.0"]
build-backend = "setuptools.build_meta"
